--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,131 @@
-.App {
+:root {
+  --color-bg: whitesmoke;
+  --color-fg: white;
+  --color-on-primary: #32a852;
+  --color-accent: #090909;
+  --color-error: #ef5350;
+  --color-disabled: ghostwhite;
+}
+
+header.appbar-root {
+  background-color: var(--color-bg);
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  z-index: 1200;
+  width: 100%;
+  padding: 1.3em;
+}
+
+.appbar-container {
+  display: flex;
+  flex-direction: row;
+}
+
+input {
+  padding: 10px;
+  border: 2px solid transparent;
+  border-radius: 0.5rem;
+  width: 30%;
+  box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06);
+  outline: none;
+  font-size: inherit;
+  text-transform: capitalize;
+}
+
+button {
+  padding: 10px;
+  margin: 0px 10px;
+  border: 2px solid transparent;
+  border-radius: 0.5rem;
+  box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06);
+  outline: none;
+  font-size: inherit;
+  background-color: var(--color-on-primary);
+  color: white;
+  cursor: pointer;
+}
+
+.button-disabled {
+  background-color: var(--color-disabled);
+  color: gray;
+}
+
+.completed {
+  color: var(--color-on-primary);
+}
+
+.delete-btn {
+  color: var(--color-error);
+}
+
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 60%;
+  margin: 1rem 5rem;
+}
+
+th {
+  border: 1px solid #dddddd;
   text-align: center;
+  padding: 10px;
+  color: --color-accent;
+  cursor: pointer;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+td:nth-child(2) {
+  text-align: left;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+th:nth-child(2) {
+  width: 80%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+tr:nth-child(even) {
+  background-color: rgba(200, 227, 207, 0.2);
+  color: --color-on-primary;
+}
+
+td {
+  border: 1px solid #dddddd;
+  padding: 10px;
+  text-align: center;
+  color: --color-accent;
+  cursor: pointer;
+}
+
+.App {
   display: flex;
   flex-direction: column;
+  text-align: center;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.loader {
+  border: 16px solid #f3f3f3;
+  border-top: 16px solid #3498db;
+  border-radius: 50%;
+  width: 130px;
+  height: 130px;
+  animation: spin 2s linear infinite;
+  align-self: center;
+  align-items: center;
+  justify-content: center;
 }
 
-.App-link {
-  color: #61dafb;
+.centered-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
 }
 
-@keyframes App-logo-spin {
-  from {
+@keyframes spin {
+  0% {
     transform: rotate(0deg);
   }
-  to {
+  100% {
     transform: rotate(360deg);
   }
 }
